@@ -1,3 +1,11 @@
+2001-11-27  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (JAVADOC_PACKAGES):  Add new packages.
+	Add coment docuemnting javadoc procedure.
+
+	* Makefile.am (dist-kawa-@VERSION@.jar):  Add configure options.
+	(kawa-@VERSION@-src.zip, kawa-src.zip):  New rules.
+
 2001-11-26  Per Bothner  <per@bothner.com>
 
 	* build.xml (build.dir):  Change to basedir.
